--- a/han.css
+++ b/han.css
@@ -650,7 +650,7 @@ h-word {
   display: inline-block;
   text-indent: 0;
 }
-@font-face {
+/* @font-face {
   font-family: "Calibri";
   src: url(NotoSans-subset.woff2), url(NotoSans-subset.zopfli.woff), url(NotoSans-subset.ttf), local("Calibri"), local(Lato), local("Helvetica Neue"), local(Helvetica);
 }
@@ -673,11 +673,9 @@ h-word {
   font-feature-settings: "fwid";
   font-language-overide: "CJK";
   src: url(CL-subset.woff2), url(CL-subset.zopfli.woff), url(CL-subset.ttf), local("Hiragino Kaku Gothic ProN"), local("Hiragino Kaku Gothic Pro"), local("Hiragino Sans W2"), local("Yu Gothic"), local(Meiryo), local("MS Gothic"), local(MS PGothic), local("Lantinghei TC Extralight"), local("Microsoft Jhenghei"), local("Noto Sans CJK KR Light"), local("Source Han Sans KR Light");
-  /* url(/font/GenYoGothicTW-Light-TTF.woff2), url(/font/GenYoGothicTW-Light-TTF.woff),  */
-  /* <link rel="preload" href="CL-subset.woff2" as="font" type="font/woff2" crossorigin> */
   unicode-range: U+2015, U+2E3A, U+2500;
   font-display: swap;
-}
+} */
 @font-face {
   font-family: "Han Trad";
   font-variant-east-asian: traditional;
