--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
 :root {
   --body-bg-color: #eee;
-  --content-bg-color: #fff;
-  --card-bg-color: #f5f5f5;
+  --content-bg-color: rgba(255,255,255,0.85);
+  --card-bg-color: rgba(235,235,235,0.86);
   --text-color: #111;
   --link-color: #111;
   --link-hover-color: $black;
   --brand-color: #fff;
   --brand-hover-color: #fff;
   --table-row-odd-bg-color: #f9f9f9;
-  --table-row-hover-bg-color: #f5f5f5;
-  --menu-item-bg-color: #f5f5f5;
+  --table-row-hover-bg-color: rgba(235,235,235,0.86);
+  --menu-item-bg-color: rgba(235,235,235,0.86);
   --btn-default-bg: #fff;
   --btn-default-color: #111;
   --btn-default-border-color: #111;
@@ -253,7 +253,7 @@ dd {
   padding: 0;
 }
 kbd {
-  background-color: #f5f5f5;
+  background-color: rgba(235,235,235,0.86);
   background-image: linear-gradient(#eee, #fff, #eee);
   border: 1px solid #ccc;
   border-radius: 0.2em;
@@ -546,7 +546,7 @@ pre .javascript .function {
   position: absolute;
   width: 100%;
 }
-/* .blockquote-center::before {
+.blockquote-center::before {
   background-image: url("../images/quote-l.svg");
   background-position: 0 -6px;
   border-top: 1px solid #ccc;
@@ -557,7 +557,7 @@ pre .javascript .function {
   background-position: 100% 8px;
   border-bottom: 1px solid #ccc;
   bottom: -20px;
-} */
+}
 .blockquote-center p,
 .blockquote-center div {
   text-align: center;
@@ -1158,7 +1158,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #1246ed;
+  background: #8f2eff;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -1639,7 +1639,7 @@ pre .javascript .function {
   color: var(--link-color);
 }
 .posts-collapse::before {
-  background: #f5f5f5;
+  background: rgba(235,235,235,0.86);
   content: ' ';
   height: 100%;
   left: 0;
@@ -2052,7 +2052,7 @@ pre .javascript .function {
   content: '\f017';
 }
 .event-list .event-past {
-  background: #f5f5f5;
+  background: rgba(235,235,235,0.86);
 }
 .event-list .event-past .event-summary,
 .event-list .event-past .event-details {
