--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -41,7 +41,7 @@ textarea, input, button, select { font-family: inherit; font-size: inherit; }
 /* Load the variable font */
 @font-face {
     font-family: 'Fira Xdi8 Variable';
-    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@deb4685/Fira%20Xdi8%20Variable.woff2') format('woff2-variations');
+    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@e47e0a8/Fira%20Xdi8%20Variable.ttf') format('woff2-variations');
     font-weight: 100 900;
   }
   
