--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -32,7 +32,6 @@ textarea, input, button, select { font-family: inherit; font-size: inherit; }
 .count {
   font-weight: var(--text-weight);
   font-variation-settings: "wght" var(--text-weight);
-  text-transform: uppercase; 
   -moz-font-feature-settings: 'case'; 
   -webkit-font-feature-settings: 'case'; 
   font-feature-settings: 'case' on; 
@@ -41,7 +40,7 @@ textarea, input, button, select { font-family: inherit; font-size: inherit; }
 /* Load the variable font */
 @font-face {
     font-family: 'Fira Xdi8 Variable';
-    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@e47e0a8/Fira%20Xdi8%20Variable.ttf') format('woff2-variations');
+    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@e47e0a8/Fira%20Xdi8%20Variable.woff2') format('woff2-variations');
     font-weight: 100 900;
   }
   
