--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -28,6 +28,14 @@ textarea:focus {
 
 textarea, input, button, select { font-family: inherit; font-size: inherit; }
 
+.radiocontainer input:checked ~ .checkmark ~.radiolabel {
+  color: #456bd9;
+}
+
+.radiocontainer input:checked ~ .checkmark ~.radiolabel comment {
+  color:  rgb(119, 119, 119);
+}
+
 .xdnum {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
 .count {
   font-weight: var(--text-weight);
@@ -154,4 +162,69 @@ textarea, input, button, select { font-family: inherit; font-size: inherit; }
   .button:hover,
   .button:focus {
     background: #eaf0f3;
+}
+
+/* Customize the label (the container) */
+.radiocontainer {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  /* margin-bottom: 12px; */
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.radiocontainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 5;
+  left: 5;
+  height: 15px;
+  width: 15px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radiocontainer:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.radiocontainer input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radiocontainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radiocontainer .checkmark:after {
+  top: 5px;
+  left: 4.5px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: white;
 }
