--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: "Fira Xdi8";
-    src: url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@1c50ba7/FiraXdi8-Regular.ttf);
+    src: url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@b2323d8/FiraXdi8-Regular.woff2);
 }
 
 xd {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
