--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -7,9 +7,9 @@
     src: url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@b2323d8/FiraXdi8-Regular.woff2);
 }
 
-xd {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
+span.xd {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
 
-comment {
+span.comment {
   color: darkgray; font-size: 80%; display: inline;
 }
 
