--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -39,7 +39,7 @@ textarea, button { font-family: inherit; font-size: 95%; }
 }
 
 .xdnum {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
-.caps {
+caps {
   font-weight: var(--text-weight);
   font-variation-settings: "wght" var(--text-weight);
   -moz-font-feature-settings: 'case'; 
