--- a/Xdi8Translator.css
+++ b/Xdi8Translator.css
@@ -4,9 +4,13 @@
 
 @font-face {
     font-family: "Fira Xdi8";
-    src: url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@ef32285/FiraXdi8-Regular-subset.woff2) format('woff2'),
-    url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@ef32285/FiraXdi8-Regular-subset.woff) format('woff'),
-    url(https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@ef32285/FiraXdi8-Regular.ttf) format('ttf');
+    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@2f449da/FiraXdi8-Regular-subset.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Fira Xdi8 Variable';
+  src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@2f449da/Fira%20Xdi8%20Variable-subset.woff2') format('woff2-variations');
+  font-weight: 100 900;
 }
 
 xd {font-family:"Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;}
@@ -39,23 +43,18 @@ textarea, button { font-family: inherit; font-size: 95%; }
 }
 
 .xdnum {
-  font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
+  font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
   font-weight: var(--text-weight);
   font-variation-settings: "wght" var(--text-weight);
 }
 caps {
-  font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
+  font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
   -moz-font-feature-settings: 'case'; 
   -webkit-font-feature-settings: 'case'; 
   font-feature-settings: 'case' on; 
 }
 
 /* Load the variable font */
-@font-face {
-    font-family: 'Fira Xdi8 Variable';
-    src: url('https://cdn.jsdelivr.net/gh/edward-martyr/syyon-vencie@ef32285/Fira%20Xdi8%20Variable.woff2') format('woff2-variations');
-    font-weight: 100 900;
-  }
   
   :root {
     --text-weight: 400;
@@ -83,7 +82,7 @@ caps {
   }
   
   .demo-text {
-    font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
+    font-family: "Fira Xdi8 Variable", "Fira Xdi8", "FiraGO", "Fira Sans", "Source Sans Variable", "MI Lan Pro VF", sans-serif;
     font-size: 120%;
     font-weight: var(--text-weight);
     font-variation-settings: "wght" var(--text-weight);
